@@ -1,3 +1,8 @@
+2020-03-31 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/realloc.c:
+	  Document some realloc details.
+
 2020-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c,
